fix: enhance password input handling; improve visibility toggling and debugging

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -102,6 +102,7 @@ main a:hover {
 #toggleSenha {
     position: absolute;
     right: 10px;
+    bottom: 5px;
     cursor: pointer;
     user-select: none;
     color: #555;
